--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@ Inspired by We were Here
 <font color="red">
 Two Players are required !!!
 </br>
+The map works on 1.19.2 !!!
+</br>
 Please turn off ingame music and decrease main volume under 50 %
 </br>
 Some create mechanism will seem closed or inactive after a respawn. I recommend to the dead player to quit and restart
@@ -71,4 +73,5 @@ Chapter 1
 
 </body>
 </html>
+
 
