--- a/index.html
+++ b/index.html
@@ -63,6 +63,20 @@ Chapter 1
   <a href="create-1.19.2-0.5.1.f.jar" download> create mod </a>
 </br>
   <a href="WCH ch 1 0.9.9.zip" download> minecraft map </a>
+</br>
+ <a href="WCH_ost.jar" download> musics mod 1/7 </a>
+</br>
+ <a href="WCH_ost light2.jar" download> musics mod 2/7 </a>
+</br>
+ <a href="WCH_ost light3.jar" download> musics mod 3/7 </a>
+</br>
+ <a href="WCH_ost light4.jar" download> musics mod 4/7 </a>
+</br>
+ <a href="WCH_ost light5.jar" download> musics mod 5/7 </a>
+</br>
+ <a href="WCH_ost light6.jar" download> musics mod 6/7 </a>
+</br>
+  <a href="WCH_ost light7.jar" download> musics mod 7/7 </a>
 </details>
 
 </p>
@@ -73,5 +87,6 @@ Chapter 1
 
 </body>
 </html>
+
 
 
