--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ Chapter 1
  <summary> files </summary>
   <a href="create-1.19.2-0.5.1.f.jar" download> create mod </a>
 </br>
-  <a href="WCH ch 1 0.9.9.zip" download> minecraft map </a>
+  <a href="https://www.mediafire.com/file/nqcgi2br9a7bc5x/WCH_ch_1_1.0.0.zip/file"> minecraft map </a>
 </br>
  <a href="WCH_ost.jar" download> musics mod 1/7 </a>
 </br>
@@ -87,6 +87,7 @@ Chapter 1
 
 </body>
 </html>
+
 
 
 
